# hg-core

./: CMakeLists.txt  README.md  _clang-format  version.txt
.github/workflows/: code-coverage.yml  flawfinder-analysis.yml  main.yml
app_glfw/: CMakeLists.txt  app_glfw.cpp  app_glfw.h
cmake/: FindEGL.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake  armv8-toolchainfile.cmake
doc/: odroid_m1.md
engine/: CMakeLists.txt  anim.cpp  anim.h  anim_load_binary.cpp  anim_load_json.cpp  assets.cpp  assets.h  assets_rw_interface.cpp  assets_rw_interface.h  component.cpp  create_model.cpp  create_model.h  file_format.h  fps_controller.cpp  fps_controller.h  geometry.cpp  geometry.h  json.cpp  json.h  load_dds.cpp  load_dds.h  load_save_scene_flags.h  model_builder.cpp  model_builder.h  node.cpp  node.h  picture.cpp  picture.h  render_pipeline.cpp  render_pipeline.h  resource_cache.h  scene.cpp  scene.h  scene_load_binary.cpp  scene_load_json.cpp  script_param.h  shader.h  vertex.cpp  vertex.h
foundation/: CMakeLists.txt  assert.cpp  assert.h  axis.h  cext.h  clock.cpp  clock.h  cmd_line.cpp  cmd_line.h  color.cpp  color.h  data.cpp  data.h  data_rw_interface.cpp  data_rw_interface.h  dir.cpp  dir.h  dummy.txt  easing.cpp  easing.h  file.cpp  file.h  file_rw_interface.cpp  frustum.cpp  frustum.h  generational_vector_list.h  intrusive_shared_ptr_st.h  log.cpp  log.h  math.cpp  math.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  matrix44.cpp  matrix44.h  minmax.cpp  minmax.h  obb.cpp  (+34 more)
samples/: CMakeLists.txt  geo_viewer.cpp  scn_viewer.cpp
tests/: CMakeLists.txt  test_foundation.cpp  test_render_pipeline.cpp  tests.cpp  utils.cpp  utils.h
tests/data/: bc1un.dds  bc2un.dds  bc3un.dds  bc4sn.dds  bc4un.dds  bc5sn.dds  bc5un.dds  bc7un.dds  bgra8un.dds  default_normal_map.dds  r16un.dds  r32f.dds  r8un.dds  rg16f.dds  rg16sn.dds  rg16un.dds  rg8sn.dds  rg8un.dds  rgb10a2un.dds  rgba16f.dds  rgba16si.dds  rgba16sn.dds  rgba16ui.dds  rgba32f.dds  rgba32si.dds  rgba8si.dds  rgba8sn.dds  rgba8ui.dds  rgba8un.dds
tests/engine/: anim.cpp  load_dds.cpp  node.cpp  picture.cpp  render_pipeline.cpp  resource_cache.cpp  scene.cpp  vertex_layout.cpp
tests/foundation/: cext.cpp  clock.cpp  color.cpp  data.cpp  data_rw_interface.cpp  dir.cpp  easing.cpp  file.cpp  file_rw_interface.cpp  frustum.cpp  log.cpp  mat3.cpp  mat4.cpp  mat44.cpp  math.cpp  minmax.cpp  pack_float.cpp  path_tools.cpp  plane.cpp  projection.cpp  quaternion.cpp  rand.cpp  rw_interface.cpp  string.cpp  units.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector_list.cpp
